--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,8 +1,10 @@
 <h1>10 Stations within 6 miles</h1>
-<% @stations.each do |station| %>
-  <h3 class= 'name'><%= station.name %></h3>
-  <p class= 'address'><%= station.address %></p>
-  <p class= 'fuel_types'><%= station.fuel_types %></p>
-  <p class= 'distance'><%= station.distance %></p>
-  <p class= 'access_times'><%= station.access_times %></p>
-<% end %>
+  <% @stations.each do |station| %>
+    <div class='station'>
+      <h3 class= 'name'><%= station.name %></h3>
+      <p class= 'address'><%= station.address %></p>
+      <p class= 'fuel_types'><%= station.fuel_types %></p>
+      <p class= 'distance'><%= station.distance %></p>
+      <p class= 'access_times'><%= station.access_times %></p>
+    </div>
+  <% end %>
